Edit super mega css. Add messenger backend for AI

--- a/AiLab/app/base/static/css/ide.css
+++ b/AiLab/app/base/static/css/ide.css
@@ -1,27 +1,33 @@
 :root {
     --background: #fff;
     --color: #424242;
-    --button-background: #f5f5f5;
+    --button-background: #e9e9e9;
     --button-background-hover: #c0bfbf;
     --button-background-active: #858585;
     --border: #ddd;
-    --tab: #f0f0f0;
-    --tab-hover: #c0c0c0;
+    --border2: #d6d6d6;
+    --tab: #c0c0c0;
+    --tab-hover: #d6d6d6;
+    --tab-active: #f0f0f0;
     --white: white;
     --console-back: #f5f5f5;
     --background--CodeMirror: #f5f5f5;
     --background-hint: #ededed;
     --color-hint: #2d8515;
     --back2-hint: #dddddd;
+    --set: #d2d2d2;
+    --set-hover: #e3e3e3;
+    --set-active: #d0d0d0;
 }
 
 .dark-mode {
     --background: #222222;
     --color: white;
-    --button-background: #2a2a2a;
+    --button-background: #363636;
     --button-background-hover: #1e1e1eec;
     --button-background-active: #191919ec;
     --border: #373737;
+    --border2: #3c3c3c;
     --tab: #333333;
     --tab-hover: #282828;
     --white: #222;
@@ -29,7 +35,9 @@
     --background--CodeMirror: #2a2a2a;
     --background-hint: #303139;
     --color-hint: #ce7070;
-    --back2-hint: #1c1c1c;
+    --set: #383838;
+    --set-hover: #252525;
+    --set-active: #1e1e1e;
 }
 
 /* Общие стили */
@@ -440,7 +448,14 @@ body {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     color: var(--color);
     background-color: var(--button-background);
+}
 
+.opt-ver-menu-triger:hover {
+    background-color: var(--button-background-hover);
+}
+
+.opt-ver-menu-triger:active {
+    background-color: var(--button-background-active);
 }
 
 .opt-ver-menu-triger-reverse{
@@ -557,13 +572,12 @@ body {
 
 .languages{
     width: 8vw;
-    font-size: 1vw;
-    font-weight: 700;
+    font-size: 1.2vw;
+    font-weight: 500;
     border-radius: 10px;
     user-select: none;
     overflow-y: auto;
     overflow-x: auto;
-    padding-top: 0.4vw;
     padding-left: 1.5vw;
     padding-right: 1vw;
     margin-left: 1vw;
@@ -588,16 +602,15 @@ body {
 
 .version-download{
     width: 8vw;
-    font-size: 1vw;
-    font-weight: 700;
+    font-size: 1.2vw;
+    font-weight: 500;
     border-radius: 10px;
     user-select: none;
     overflow-y: auto;
     overflow-x: auto;
-    padding-top: 0.4vw;
     padding-left: 1.5vw;
     padding-right: 1vw;
-    margin-left: 16vw;
+    margin-left: 13vw;
     border: none;
     background-color: rgba(255, 255, 255, 0);
     
@@ -647,9 +660,9 @@ body {
 
 
 .names-settings{
-    background-color: #cecece;
+    background-color: var(--console-back);
     width: 50vw;
-    height: 10vh;
+    height: 7vh;
     border-radius: 1vw;
     margin-top: 3vh;
     margin-left: 2vw;
@@ -662,7 +675,7 @@ body {
 }
 
 .settings-options{
-    background-color: #cecece;
+    background-color: var(--console-back);
     width: 50vw;
     height: 58vh;
     border-radius: 1vw;
@@ -679,9 +692,9 @@ body {
 }
 
 .settings-sets{
-    background-color: #cecece;
+    background-color: var(--console-back);
     width: 15vw;
-    height: 70vh;
+    height: 67vh;
     border-radius: 1vw;
     margin-top: 3vh;
     margin-left: 2vh;
@@ -695,8 +708,11 @@ body {
 }
 
 .title-sets{
-    margin-top: 1.5vh;
+    margin-top: 2vh;
     margin-left: 1vw;
+    display: flex;
+    justify-content: space-around;
+    font-size: 1.2vw;
 }
 .title-sets button{
     padding: 0;
@@ -708,13 +724,6 @@ body {
     margin-left: 0.3vw;
     top: -0.5vh;
     position: relative;
-    background-color: --background;
-}
-.title-sets button:hover{
-    background-color: #ececec;
-}
-.title-sets button:active{
-    background-color: #acacac;
 }
 
 .sets{
@@ -729,7 +738,7 @@ body {
     outline: 0;
     border-radius: 1vw;
     font-size: 1vw;
-    padding-top: 1vw;
+    padding-top: 1.5vw;
 }
 
 .sets div{
@@ -742,12 +751,12 @@ body {
 }
 
 .sets div:hover{
-    background-color: #8a8a8a;
-    color: var(--white);
+    background-color: var(--set-hover);
+    color: var(--color);
 }
 .sets div:active{
-    background-color: #666666;
-    color: var(--white);
+    background-color: var(--set-active);
+    color: var(--color);
 }
 
 .libraries{
@@ -763,6 +772,7 @@ body {
     margin-left: 0.4vw;
     margin-right: 0.4vw;
     font-size: 1vw;
+    color: var(--color);
     
 }
 
@@ -786,18 +796,18 @@ body {
     display: flex;
     justify-content: center;
     align-content: center;
-    background-color: #0c68b3;
-    color: var(--white);
+    background-color: var(--button-background-hover);
+    color: var(--color);
 }
 
 .libraries div:active{
-    background-color: #003663;
-    color: var(--white);
+    background-color: var(--button-background-active);
+    color: var(--color);
 }
 
 .libraries div:active:after{
-    background-color: #0c68b3;
-    color: var(--white);
+    background-color: var(--button-background-hover);
+    color: var(--color);
 }
 
 .libraries span{
@@ -828,7 +838,7 @@ body {
 .lib_element {
     margin: 1vw;
     padding: 0.5vw;
-    border: 1px solid #ccc;
+    border: 2px solid var(--border);
     cursor: pointer;
 }
 .checked::before {
@@ -841,10 +851,51 @@ body {
 }
 
 .set.active{
-    color: var(--white);
-    background-color: #aaaaaa;
-    
+    color: var(--color);
+    border: 2px solid var(--border2);
 }
 .libraries.active{
-    background-color: var(--white) !important;
+    background-color: var(--console-back) !important;
 }
+
+.notification {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 12px 20px;
+    border-radius: 4px;
+    color: white;
+    opacity: 0;
+    transition: opacity 0.3s;
+    z-index: 10001;
+    background-color: var(--background-hint);
+}
+
+.lang-ver-menu button {
+    color: var(--color);
+    border: 2px solid var(--border2);
+    background-color: var(--console-back);
+} 
+
+.lang-ver-menu button:hover {
+    background-color: var(--button-background-hover);
+} 
+
+.lang-ver-menu button:active {
+    background-color: var(--button-background-active);
+} 
+
+
+.opt-ver-menu-triger-reverse {
+    color: var(--color);
+    border: 2px solid var(--border2);
+    background-color: var(--console-back);
+} 
+
+.opt-ver-menu-triger-reverse:hover {
+    background-color: var(--button-background-hover);
+} 
+
+.opt-ver-menu-triger-reverse:active {
+    background-color: var(--button-background-active);
+} 
