--- a/AiLab/app/base/templates/ide.html
+++ b/AiLab/app/base/templates/ide.html
@@ -22,8 +22,8 @@
 
                 <div class="toolbar-left">
                     <button class="toolbarpart1 run-button" onclick="executeCode()"><i><img class="button-icons" src="{{ url_for('static', filename='img/play443.svg') }}"></i></button>
-                    <button class="toolbarpart1 save-button" onclick="saveCodeToFile()"><i><img class="button-icons" src="{{ url_for('static', filename='img/save.svg') }}"></i></button>
-                    <button class="toolbarpart1 open-button" onclick="loadFile()"><i><img class="button-icons" src="{{ url_for('static', filename='img/load.svg') }}"></i></button>
+                    <button id="save-button" class="toolbarpart1"><i><img class="button-icons" src="{{ url_for('static', filename='img/save.svg') }}"></i></button>
+                    <button class="toolbarpart1 delete-button" onclick="clearConsole()"><i><img class="button-icons" src="{{ url_for('static', filename='img/del-console.svg') }}"></i></button>
                 </div>
     
                 <button align="center" class="opt-ver-menu-triger">Настройки</button>
@@ -32,7 +32,6 @@
                     <button class="toolbarpart2 console-close-button"><i><img class="button-icons" src="{{ url_for('static', filename='img/console.svg') }}"></i></button>
                     <button class="toolbarpart2 download-button" onclick="saveConsoleToFile()"><i><img class="button-icons" src="{{ url_for('static', filename='img/save-console-as-text.svg') }}"></i></button>
                     <button class="toolbarpart2 text-button" onclick="copyToClipboard()"><i><img class="button-icons" src="{{ url_for('static', filename='img/play.svg') }}"></i></button>
-                    <button class="toolbarpart2 delete-button" onclick="clearConsole()"><i><img class="button-icons" src="{{ url_for('static', filename='img/del-console.svg') }}"></i></button>
                 </div>
                 
             </div>
@@ -72,14 +71,14 @@
                         </div>
 
                         <div class="settings-options">
-                            <h3>Библиотеки</h3>
+                            <h3></h3>
                             
 
                         </div>
                     </div>
                     <div class="settings-sets">
                         <div class="title-sets">Наборы
-                            <button class="add-set" onclick="addSet()">+</button ><button class="remove-set" onclick="deleteSelectedSet()">-</button>
+                            <div class="title-but"><button class="add-set" onclick="addSet()">+</button ><button class="remove-set" onclick="deleteSelectedSet()">-</button></div>
                         </div>
                         <div class="sets" id="sets-list">
                             
