--- a/AiLab/app/base/templates/base.html
+++ b/AiLab/app/base/templates/base.html
@@ -65,7 +65,7 @@
     <div class="messenger-container" id="messenger-container" data-user-id="{{ current_user.id | default(0, true) }}">
         <div class="messenger-header" id="messenger-header">
             <div class="search-container">
-                <input type="text" id="contact-search" placeholder="Поиск контактов..." class="search-input">
+                <input type="text" id="contact-search" placeholder="Поиск чатов..." class="search-input">
                 <button id="close-messenger" class="close-button">×</button>
             </div>
         </div>
