--- a/AiLab/app/base/templates/ide.html
+++ b/AiLab/app/base/templates/ide.html
@@ -47,7 +47,7 @@
 
 <div class="opt-ver-menu" hidden>
     <div class="pos-opt-ver">
-        <button class="opt-ver-menu-triger-reverse">X</button>
+        <button class="opt-ver-menu-triger-reverse"><i><img class="button-iconsdd" src="{{ url_for('static', filename='img/close.svg') }}"></i></button>
         <div class="lang-ver-menu">
             <div class="lang-ver-menu-item">
                 
