--- a/AiLab/app/base/static/css/ide.css
+++ b/AiLab/app/base/static/css/ide.css
@@ -18,6 +18,7 @@
     --set: #d2d2d2;
     --set-hover: #e3e3e3;
     --set-active: #d0d0d0;
+    --tabs: #ededed;
 }
 
 .dark-mode {
@@ -38,6 +39,7 @@
     --set: #383838;
     --set-hover: #252525;
     --set-active: #1e1e1e;
+    --tabs: #303030;
 }
 
 /* Общие стили */
@@ -65,6 +67,7 @@ body {
     background-color: var(--background);
     height: 100vh;
     overflow: hidden;
+    scrollbar-width: thin; /* "auto" | "thin" | "none" */
 }
 
 
@@ -85,7 +88,7 @@ body {
     padding: 0;
     justify-content: center center;
     background-color: var(--button-background);
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
 }
 
 .toolbarpart1 img{
@@ -103,7 +106,7 @@ body {
     padding: 0;
     justify-content: center center;
     background-color: var(--button-background);
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
     
     
 }
@@ -179,7 +182,7 @@ body {
     border-bottom: 1px solid var(--border);
     overflow-x:auto;
     overflow-y: hidden;
-    background-color: var(--white); 
+    background-color: var(--tabs); 
     border-top-right-radius: 0.5vw;
     border-top-left-radius: 0.5vw;
     font-size: 1vw;
@@ -200,7 +203,7 @@ body {
     height: 1.1vw;
     /* Задаем минимальную ширину */
     user-select: none;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
 }
 .tab span{
     font-size: 1vw;
@@ -249,7 +252,7 @@ body {
     width: 100%;
     box-sizing: border-box;
     transition: 0.5s;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
     /* Важно, чтобы padding учитывался в общей ширине */
     background-color: var(--background--CodeMirror) !important;
 }
@@ -330,7 +333,7 @@ body {
     display: normal;
     white-space: normal;
     transition: 0.5s;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
 }
 
 .close {
@@ -445,7 +448,7 @@ body {
     font-size: 1vw;
     position: relative;
     white-space: nowrap;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
     color: var(--color);
     background-color: var(--button-background);
 }
@@ -470,7 +473,7 @@ body {
     white-space: nowrap;
     justify-content: center;
     margin-top: 16vh;
-    /* padding-top: 0.5vw; */
+    padding-top: 0.5vw;
     padding-inline: 0vw;
     font-size: 5vh;
     align-items: center;
@@ -485,8 +488,8 @@ body {
 .opt-ver-menu-triger-reverse img{
     margin-top: 0.5vw;
     margin-bottom: 0.5vw;
-    width: 1vw;
-    height: 1vw;
+    width: 2vw;
+    height: 2vw;
     
 }
 
@@ -555,7 +558,7 @@ body {
 .lang-ver-menu{
     white-space: nowrap;
     display: flex;
-    background-color: #8d8d8d;
+    background-color: var(--background);
     width: 100%;
     height: 100vh;
     justify-content:center;
@@ -669,6 +672,7 @@ body {
     display: flex;
     font-size: 1.25vw;
     color: var(--color);
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
 }
 .names-settings h3{
     margin-left: 2vw;
@@ -682,6 +686,7 @@ body {
     margin-left: 2vw;
     margin-top: 2vh;
     padding: 0.1px;
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
 }
 
 .settings-options h3{
@@ -700,6 +705,7 @@ body {
     margin-left: 2vh;
     margin-right: 2vw;
     font-size: 1.25vw;
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
 }
 
 .settings-container{
@@ -890,6 +896,7 @@ body {
     color: var(--color);
     border: 2px solid var(--border2);
     background-color: var(--console-back);
+    box-shadow: 0px 0px 19.9px 0px rgba(0, 0, 0, 0.3);
 } 
 
 .opt-ver-menu-triger-reverse:hover {
@@ -898,4 +905,8 @@ body {
 
 .opt-ver-menu-triger-reverse:active {
     background-color: var(--button-background-active);
-} 
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px; /* Закругление дорожки */
+}
