--- a/AiLab/app/base/templates/messenger_contacts.html
+++ b/AiLab/app/base/templates/messenger_contacts.html
@@ -8,6 +8,7 @@
         </div>
     </li>
     {% for friend in friends %}
+    <hr>
     <li class="contact-item" data-user-id="{{ friend.id }}">
         <img src="{{ url_for('static', filename='uploads/' + friend.profile.profile_photo) }}" 
              alt="{{ friend.profile.full_name }}" 
@@ -22,6 +23,10 @@
         </div>
     </li>
     {% else %}
-    <p>У вас пока нет друзей для общения</p>
+    <li class="contact-item">
+        <div class="contact-info">
+            <p class="contact-name">У вас пока нету чатов с ИИ.</p>
+        </div>
+    </li>
     {% endfor %}
 </ul>
