--- a/AiLab/app/base/templates/base.html
+++ b/AiLab/app/base/templates/base.html
@@ -41,7 +41,7 @@
             {% endif %}
         </div>
         {% if current_endpoint == 'ide_blueprint.ide' %}
-        <div class="filetree-icon" data-user-id="{{ current_user.id }}">
+        <div class="filetree-icon" data-user-id="{{ current_user.id }}" data-static-path="{{ url_for('static', filename='/../user_files/')}}">
             <img src="{{ url_for('static', filename='img/icons/filetree.svg') }}" alt="filetree" class="icon-header">
         </div>
         {% endif %}
@@ -80,6 +80,9 @@
     
     
     <script>
+        const scripts = document.getElementsByTagName('script');
+        const currentScript = scripts[scripts.length - 1].src;
+        console.log(currentScript)
         function playNotificationSound() {
             const isChatOpen = document.getElementById('messenger-container').classList.contains('open');
             const isWindowFocused = document.hasFocus();
