chore(filetree&messenger) Исправить текст в мессенджере, исправил баг с скачиванием изображений

--- a/AiLab/app/base/templates/messenger_ai_contacts.html
+++ b/AiLab/app/base/templates/messenger_ai_contacts.html
@@ -14,7 +14,7 @@
     {% else %}
     <li class="contact-item">
         <div class="contact-info">
-            <p class="contact-name">У вас пока нету чатов с ИИ.</p>
+            <p class="contact-name">У вас пока нет чатов с ИИ.</p>
         </div>
     </li>
     {% endfor %}
