--- a/AiLab/app/base/static/css/ide.css
+++ b/AiLab/app/base/static/css/ide.css
@@ -525,13 +525,25 @@ body {
     
 }
 
-.open-filetree{
+.part2-el.open-filetree{
     margin-left: 26vw;
+    max-width: 72vw;
+    transition: 0.5s;
 }
 
-.open-messenger{
+.part2-el.open-messenger{
     margin-right: 26vw; 
+    max-width: 72vw;
+    transition: 0.5s;
 }
+
+.part2-el.open-messenger.open-filetree {
+    margin-right: 26vw;
+    margin-left: 26vw; 
+    max-width: 48vw;
+    transition: 0.5s;
+}
+
 
 .part3-el-item{
     width:0vw;
